--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,14 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Generar Excel de Guerra</title>
+    <title>Descargar guerra</title>
 </head>
 <body>
-    <h1>Extraer Guerra de Clash of Clans</h1>
-    <form action="/generar" method="POST">
-        <label for="url">Pega la URL de la guerra:</label><br><br>
-        <input type="text" id="url" name="url" placeholder="https://link-a-la-guerra.com" required size="60"><br><br>
-        <button type="submit">Generar Excel</button>
+    <h1>Descargar datos de guerra</h1>
+    <form action="/generar" method="post">
+        <label for="url">Pega aquí la URL de la guerra:</label><br><br>
+        <input type="text" id="url" name="url" size="80" required><br><br>
+        <button type="submit">Generar archivo</button>
     </form>
 </body>
 </html>
